# expansion-iea-agent

./: README.md  pyproject.toml
iea_agent/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
iea_agent/data/chroma/: chroma.sqlite3
iea_agent/src/iea/: __init__.py  cli.py  config.py  env.py  llm.py  loggingo.py
iea_agent/src/iea/graphs/: __init__.py  info.py  orchestration.py  self_mod.py  targeting.py
iea_agent/src/iea/memory/: __init__.py  knowledge_base.py  vectorstore.py
iea_agent/src/iea/prompts/: __init__.py  system_prompts.py
iea_agent/src/iea/tools/: __init__.py  _tool.py  browser.py  fs_git.py  http_client.py  parser.py  shell.py  web_search.py
iea_agent/tests/: test_graph_selfmod.py  test_graph_targeting.py  test_memory.py  test_smoke.py  test_tools_fs_git.py
