[project]
name = "expansion-iea-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Phizilion",email = "Phizilion@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
